osd: unmount store after service.shutdown()

in service.shutdown(), the store's cache is accessed, so we need to
destroy the store after service.shutdown()

Fixes: http://tracker.ceph.com/issues/37975
Signed-off-by: Kefu Chai <kchai@redhat.com>

BUG #48